--- a/index.html
+++ b/index.html
@@ -3,7 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Effective Solutions for Your Business</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li>+11 (000) 111-11-11</li>
+      </ul>
+    </header>
+
+    <main>
+      <section>
+        <h1>Effective Solutionsfor Your Business</h1>
+        <button>Order Service</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+
+        <img src="./Image/img1.jpg" alt="img1.jpg" />
+        <img src="./Image/img2.jpg" alt="img2.jpg" />
+        <img src="./Image/img3.jpg" alt="img3.jpg" />
+        <img src="./Image/img4.jpg" alt="img4.jpg" />
+      </section>
+    </main>
+
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
