--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li>
             <a href="">Studio</a>
@@ -23,19 +24,20 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li>+11 (000) 111-11-11</li>
+        <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <main>
       <section>
-        <h1>Effective Solutionsfor Your Business</h1>
-        <button>Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>section</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -66,11 +68,29 @@
       </section>
       <section>
         <h2>Our Team</h2>
-
-        <img src="./Image/img1.jpg" alt="img1.jpg" />
-        <img src="./Image/img2.jpg" alt="img2.jpg" />
-        <img src="./Image/img3.jpg" alt="img3.jpg" />
-        <img src="./Image/img4.jpg" alt="img4.jpg" />
+        <ul>
+          <li>
+            <img src="./Image/img1.jpg" width="264" alt="img1" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./Image/img2.jpg" width="264" alt="img2" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./Image/img3.jpg" width="264" alt="img3" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./Image/img4.jpg" width="264" alt="img4" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+          <img src="" alt="" />
+        </ul>
       </section>
     </main>
 
