--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -70,26 +72,25 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./Image/img1.jpg" width="264" alt="img1" />
+            <img src="./image/img1.jpg" width="264" alt="img1" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./Image/img2.jpg" width="264" alt="img2" />
+            <img src="./image/img2.jpg" width="264" alt="img2" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./Image/img3.jpg" width="264" alt="img3" />
+            <img src="./image/img3.jpg" width="264" alt="img3" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./Image/img4.jpg" width="264" alt="img4" />
+            <img src="./image/img4.jpg" width="264" alt="img4" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
-          <img src="" alt="" />
         </ul>
       </section>
     </main>
