--- a/index.html
+++ b/index.html
@@ -76,22 +76,25 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./image/img1.jpg" width="264" alt="img1" />
+            <img src="./images/img1.jpg" width="264" alt="img1" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
+
           <li>
-            <img src="./image/img2.jpg" width="264" alt="img2" />
+            <img src="./images/img2.jpg" width="264" alt="img2" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
+
           <li>
-            <img src="./image/img3.jpg" width="264" alt="img3" />
+            <img src="./images/img3.jpg" width="264" alt="img3" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
+
           <li>
-            <img src="./image/img4.jpg" width="264" alt="img4" />
+            <img src="./images/img4.jpg" width="264" alt="img4" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
