--- a/index.html
+++ b/index.html
@@ -76,25 +76,37 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/Mark Guerrero.jpg" width="264" alt="img1" />
+            <img
+              src="./images/Mark Guerrero.jpg"
+              width="264"
+              alt="Mark Guerrero"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/Tom Ford.jpg" width="264" alt="img2" />
+            <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford2" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./images/Camila Garcia.jpg" width="264" alt="img3" />
+            <img
+              src="./images/Camila Garcia.jpg"
+              width="264"
+              alt="Camila Garcia3"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./images/Daniel Wilson.jpg" width="264" alt="img4" />
+            <img
+              src="./images/Daniel Wilson.jpg"
+              width="264"
+              alt="Daniel Wilson"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
