--- a/index.html
+++ b/index.html
@@ -76,37 +76,25 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/Mark Guerrero.jpg"
-              width="264"
-              alt="Mark Guerrero"
-            />
+            <img src="./images/Mark.jpg" width="264" alt="Mark" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford2" />
+            <img src="./images/Tom.jpg" width="264" alt="Tom" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img
-              src="./images/Camila Garcia.jpg"
-              width="264"
-              alt="Camila Garcia3"
-            />
+            <img src="./images/Camila.jpg" width="264" alt="Camila" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img
-              src="./images/Daniel Wilson.jpg"
-              width="264"
-              alt="Daniel Wilson"
-            />
+            <img src="./images/Daniel.jpg" width="264" alt="Daniel" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
